--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -46,10 +46,20 @@ on:
         required: false
         type: boolean
         default: true
+      n8n_version:
+        description: 'N8N version to build'
+        required: false
+        type: string
+        default: 'snapshot'
       success_url:
         description: 'URL to call after the build is successful'
         required: false
         type: string
+      ref_name:
+        description: 'Ref name'
+        required: false
+        type: string
+        default: 'unknown'
 
   pull_request:
     types:
@@ -85,6 +95,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
+          ref: ${{ inputs.ref_name }}
           fetch-depth: 0
 
       - name: Setup pnpm
@@ -149,7 +160,7 @@ jobs:
             else
               # Other manual dispatch types (dev, stable, nightly), are these used, could cleanup?
               echo "release_type=${{ inputs.release_type }}" >> $GITHUB_OUTPUT
-              echo "n8n_version=snapshot" >> $GITHUB_OUTPUT
+              echo "n8n_version=${{ inputs.n8n_version }}" >> $GITHUB_OUTPUT
               echo "push_enabled=${{ inputs.push_to_registry }}" >> $GITHUB_OUTPUT
             fi
 
